# doctrail

./: .gitignore  README.md  doctrail  doctrail.py  pyproject.toml
docs/: cli-reference.md  config_specification.md  configuration.md  enrich.md  enum_list_feature.md  features.md  gemini_support.md  html-extraction.md  index.md  ingest.md  manifest-ingestion.md  multi_model_feature.md  optional_fields_guide.md  quick-start.md  schema-driven.md  schema_standardization.md  xml_schema_guide.md  zotero_plugin.md
src/: constants.py  core_utils.py  db_operations.py  enrichment_config.py  export_operations.py  file_filters.py  ingester.py  llm_operations.py  main.py  pydantic_schema.py  schema_managers.py  types.py
src/config/: __init__.py  config_manager.py  validators.py
src/extractors/: __init__.py  djvu_extractor.py  docx_extractor.py  epub_extractor.py  html_extractor.py  mhtml-to-html.py  mhtml_extractor.py  mobi_extractor.py  pdf_extractor.py  smart_html_extractor.py  smart_html_extractor_final.py
src/ingest/: __init__.py  base.py  core.py  database.py  document_processor.py  extractors.py  file_utils.py  manifest.py  text_processing.py
src/llm/: __init__.py  client.py  token_utils.py
src/llm_providers/: __init__.py  factory.py  gemini_provider.py  openai_provider.py
src/plugins/: README.md  __init__.py  _chinese_converter.py  doi_connector.py.disabled  example_custom.py  zotero.py  zotero_connector.py  zotero_ingester.py
src/repositories/: __init__.py  (+3 more)
tests/: README.md  test_cost_estimation.py  test_doctrail.py  test_prompt_templates.py
(+49 files in other folders)
